<resources>
    <string name="app_name">PriorityGroceryEmpty</string>
    <string name="action_settings">Settings</string>
    <string name="add_item">Add Item</string>
    <string name="remove_item">Remove Item</string>
    <string name="new_item">New Item</string>
    <string name="item_cost">Cost</string>
    <string name="item_priority">Priority</string>
    <string name="cost">$0.00</string>
    <string name="about">About</string>
</resources>
