<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="com.example.android.prioritygroceryempty.MainActivity"
    >

    <ListView
        android:id="@+id/grocery_list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".9999"
        android:clickable="false">

    </ListView>




    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/cost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/cost"
            android:textAlignment="center"
            android:layout_row="0"
            android:layout_column="3"
            />

        <EditText
            android:id="@+id/itemName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="1"
            android:hint="@string/new_item"
            android:inputType="text"


            android:singleLine="true" />

        <EditText
            android:id="@+id/itemPriority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="1"
            android:hint="@string/item_priority"
            android:inputType="number" />

        <EditText
            android:id="@+id/itemPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="4"
            android:layout_row="1"
            android:hint="@string/item_cost"
            android:inputType="numberDecimal" />


        <Button
            android:id="@+id/add_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="addItem"
            android:text="@string/add_item"
            android:layout_column="1"
            android:layout_row="2"

            />

        <Button
            android:id="@+id/remove_button"
            android:onClick="removeItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="2"
            android:text="@string/remove_item" />


       <Space
           android:layout_row="5"
           android:layout_column="3"
           android:layout_marginBottom="30dp"
           />
    </GridLayout>


</LinearLayout>
